# ProstClas

./: README.md
Shape/: CMakeLists.txt  main.cpp  shape.cpp  shape.hpp  shape.wsd  test.cpp
fraction/: CMakeLists.txt  fraction.cpp  fraction.hpp  fraction.wsd  main.cpp  test.cpp
time/: CMakeLists.txt  main.cpp  test.cpp  time.cpp  time.hpp  time.wsd
vector/: CMakeLists.txt  main.cpp  test.cpp  vector.cpp  vector.hpp  vector.wsd
